fix overflow swatch (#67)

--- a/assets/component-product-variant-picker.css
+++ b/assets/component-product-variant-picker.css
@@ -14,6 +14,8 @@ variant-selects,
   .horizontally-scrollable {
     flex-wrap: nowrap;
     padding: 0px 2px;
+    overflow-x: scroll;
+    min-width: 100%;
   }
 }
 
